# MLOps-Construction-Cost-Prediction

./: .env.example  .env.test  .gitignore  ANALYSE_PYPROJECT_SERVICES.md  AUDIT_CODE.md  AUDIT_REQUIREMENTS.md  Makefile  Makefile copy  README.md  docker-compose.yml  pyproject.toml  requirements-base.txt  test_api.py  tree.fr
.github/workflows/: ci.yml  test.yml
api/gateway_api/: Dockerfile  main.py  requirements.txt
api/gateway_api/core/: config.py
api/gateway_api/routers/: auth.py  configs.py  data_contract.py  datasets.py  experiments.py  features.py  inference.py  model_schemas.py  models.py  pipeline.py  system.py  training.py
api/gateway_api/services/: airflow_client.py  config_service.py  dataset_service.py  inference_client.py  mlflow_client.py  security.py  system_service.py
api/inference_api/: Dockerfile  main.py  model_loader.py  requirements.txt  schema_builder.py
apps/ml_platform/: Dockerfile.streamlit  app.py  requirements.txt  streamlit_auth.py
apps/ml_platform/pages/: 0_Overview.py  1_Inference.py  2_Experiments.py  3_Datasets.py  3_Feature_Schemas.py  4_Feature_Schemas.py  4_Model_Schemas.py  5_Model_Schemas.py  (+3 more)
configs/: README.md  active_config.yaml  params.yaml
configs/data_contracts/: v1.yaml
configs/features/: v1.yaml  v2.yaml  v3.yaml  v4.yaml  v5.yaml
configs/models/: v1.yaml  v2.yaml  v3.yaml  v4.yaml
configs/splits/: v1.yaml
dags/: data_pipeline_dag.py  mlflow_debug_dag.py  retrain_policy_dag.py  train_pipeline_dag.py  training_dag.py
data/: images.dvc  processed.dvc  raw.dvc
data/processed/: master.parquet.dvc
data/raw/: batch_20260221_174620_310aef.dvc  batch_20260221_180238_dcdb81.dvc  batch_20260221_181005_19de12.dvc  batch_20260221_182004_68fed9.dvc  batch_20260221_211951_2616be.dvc  batch_20260223_212004_d2b146.dvc  batch_20260223_220439_8125b6.dvc  batch_20260223_223508_a28afa.dvc  batch_20260225_022949_7c6450.dvc
data/splits/: v1.dvc
deployments/: .env.example  Makefile  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.yml
deployments/airflow/: Dockerfile.airflow  requirements.txt
deployments/k8s/: 01-configmap-env.yaml  02-configmap-prometheus.yaml  03-secrets.yaml  04-pv-pvcs.yaml  10-postgres.yaml  11-airflow-init.yaml  12-mlflow.yaml  13-airflow-webserver.yaml  14-airflow-scheduler.yaml  15-inference-api.yaml  16-gateway-api.yaml  17-streamlit.yaml  18-prometheus.yaml  19-grafana.yaml
deployments/mlflow/: Dockerfile.mlflow
deployments/nginx/: .htpasswd  Dockerfile  nginx.conf
deployments/postgres/: init-databases.sh
deployments/prometheus/: prometheus.yml
deployments/streamlit/: Dockerfile.streamlit
docker/: Dockerfile.mlflow  docker-compose.yml
docs/: INTEGRATION_TESTS.md  configuration_management.md  data_pipeline.md  train_pipeline.md
frontend/: requirements.txt  streamlit_app.py  streamlit_auth.py
frontend/.streamlit/: config.toml
frontend/pages/: 0_Overview.py  1_Inference.py  2_Experiments.py  3_Datasets.py  5_Model_Schemas.py  6_Train.py  7_Monitoring.py
k8s/oracle/: 01-configmap-env.yaml  02-configmap-prometheus.yaml  03-secrets.example.yaml  10-storage.yaml  20-postgres.yaml  30-mlflow.yaml  40-airflow.yaml  50-inference-api.yaml  60-gateway-api.yaml  70-prometheus.yaml  80-grafana.yaml  90-streamlit.yaml  README.md  kustomization.yaml
mlflow_server/: mlflow.db
monitoring/prometheus/: prometheus.yml
scripts/: deploy_oracle_k3s_simple.sh  generate_synthetic_incoming_batch.py  prepare_simulation_data.py  reinit_source.py  run_ingestion.py  run_training.py  split_by_year.py  test.py
scripts/data/: run_archive.py  run_check_incoming.py  run_ingestion.py  run_preprocess.py
scripts/training/: init_run_mlflow.py  run_evaluate.py  run_evaluation.py  run_prepare_dataset.py  run_promotion.py  run_split.py  run_train.py
src/: streamlit_app.py
src/api/: main.py  requirements.txt
src/data/: data_contract.py  ingest.py  linked_files.py  merge.py  preprocess.py  preprocess_old.py  schema.py  splits.py  transformers.py  validate.py
src/features/: feature_schema.py  model_preprocessor.py
src/inference/: schema_builder.py
src/logging/: logging_config.py
src/models/: loader.py  model_schema.py
src/registry/: model_registry.py  run_metadata.py
src/splitting/: split_schema.py  split_strategies.py
src/training/: evaluate.py  metrics.py  train.py
src/utils/: active_config.py  data_versioning.py  io.py  logger.py  mlflow_config.py  versioned_config.py
tests/: Makefile  README_TESTS.md  conftest.py  requirements.txt  test_api.py
tests/data/: test_splits.py
tests/integration/: test_all_endpoints.py  test_auth_endpoints.py  test_check_incoming_cli.py  test_dataset_endpoints.py  test_gateway_endpoints.py  test_ingestion_cli.py  test_preprocess_cli.py  test_protected_endpoints.py  test_run_archive.py  test_run_preprocess.py
tests/training/: test_train_mlflow.py
tests/unit/: test_canonicalize_linked_images.py  test_data_pipeline.py  test_feature_schema_versions.py  test_features_models.py  test_retrain_policy.py  test_security.py  test_security_comprehensive.py  test_streamlit_pages.py  test_validation_data.py
(+28 files in other folders)
