[project]
name = "mlops-construction-cost-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dvc>=3.66.1",
    "joblib>=1.5.3",
    "mlflow>=3.9.0",
    "numpy>=1.26.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.0",
    "pytest>=9.0.2",
    "pyyaml>=6.0.1",
    "rasterio>=1.4.4",
    "scikit-learn>=1.3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
