[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-construction-cost-prediction"
version = "0.1.0"
description = "MLOps platform for construction cost prediction using satellite and GIS data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow>=3.9.0,<4.0",
    "pandas>=2.3.3,<3.0",
    "pyyaml>=6.0.1,<7.0",
    "scikit-learn>=1.3.0,<2.0",
]

[project.optional-dependencies]
gateway = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.34.0,<1.0",
    "requests>=2.31.0,<3.0",
    "pydantic>=2.0,<3.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "python-multipart",
]

inference = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn>=0.34.0,<1.0",
    "prometheus_client>=0.20.0,<1.0",
    "python-dotenv>=1.0.0,<2.0",
]

monitoring = [
    "prometheus_client>=0.20.0,<1.0",
]

airflow = [
    "apache-airflow-providers-docker",
    "apache-airflow-providers-postgres",
    "rasterio>=1.4.4,<2.0",
    "dvc>=3.66.1,<4.0",
]

dev = [
    "pytest",
    "pytest-cov",
    "joblib>=1.5.3,<2.0",
    "dvc>=3.66.1,<4.0",
    "rasterio>=1.4.4,<2.0",
    "python-dotenv>=1.0.0,<2.0",
    "python-jose[cryptography]",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
]

lint = [
    "black",
    "flake8",
    "mypy",
    "isort",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
